--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
 
+@font-face {
+     font-family: 'DungGeunMo';
+     src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/DungGeunMo.woff') format('woff');
+     font-weight: normal;
+     font-style: normal;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
